# ANL-Protocol

./: .gitignore  2026-07-20_audyt-zmian-po-audycie.md  AUDIT-HEAD.txt  Anchor.toml  Cargo.toml  MANIFEST-audyt6.txt  README.md  README.pl.md  TEST-LOG-2026-07-20.sha256  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
core/tests/: properties.rs
crates/anl-math/: Cargo.toml
crates/anl-math/src/: lib.rs
crates/anl-math/tests/: properties.rs
docs/: AUDIT-RESPONSE.md  CHANGES-AFTER-AUDIT3.md  SECURITY-AUDITS.md  SECURITY-AUDITS.pl.md  TEST-LOG.sha256  TEST-LOG.txt
docs/audits/: 2026-07-18_analiza-ogolna_claude-fable5.md  2026-07-18_audyt-bezpieczenstwa_claude-fable5.md  2026-07-18_audyt-bezpieczenstwa_openai-5.6sol.md  2026-07-20_onchain-sbf-evidence.md  MANIFEST-audyt5.txt  README.md  TEST-LOG-2026-07-20.txt  audit-3-verification-gpt.md  audit-4-verification-gpt.md
programs/anl_staking/: Cargo.toml
programs/anl_staking/src/: constants.rs  errors.rs  lib.rs
programs/anl_staking/src/instructions/: create_pool.rs  fund.rs  initialize.rs  lifecycle.rs  mod.rs  set_pause.rs  stake.rs
programs/anl_staking/src/state/: mod.rs
programs/anl_staking/tests/: integration.rs
scripts/: audit-evidence.sh  build-mainnet.sh  build-testnet.sh  fund-xnt.js
website/: en.html  index.html
website/main/: en.html  index.html
website/testnet/: en.html  index.html
