[package]
name = "anl-math"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ANL Staking Protocol — deterministic reward math (on-chain + reference model)"

[dependencies]

[dev-dependencies]
proptest = { version = "=1.5.0", default-features = false, features = ["std"] }

[features]
default = []
test-periods = []
